# pybash

./: .flake8  Makefile  README.md  demo.py  pybash.py  pyproject.toml  run.py  test.txt  test_pybash.py
.github/workflows/: python-app.yml
examples/: demo.py  hello.py  run.py
pybash/: __main__.py  hook.py  transformer.py
