[tool.poetry]
name = "PyBash"
version = "0.1.1"
description = ">execute bash commands from python easily"
authors = ["Jay"]
readme = "README.md"
packages = [{include = "pybash.py"}]

[tool.poetry.dependencies]
python = "^3.7"
ideas = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = 1

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = "pybash"
known_third_party = ["ideas", "token_utils"]